--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
   
     <title>Narges Naghavi</title>
   </head>
   <body>
+    <div class="scroll-box">
     <nav>
       <div class="nav-container">
-      <div class="logo">
+      <div class="logo" data-aos="zoom-out" data-aos-duration="1500">
           Narges<span>Naghavi</span>
        </div>
       <div class="links">
-        <div class="link"><a href="#home">Home</a></div>
-        <div class="link"><a href="#experience">experience</a></div>
-        <div class="link"><a href="#education">education</a></div>
-        <div class="link"><a href="#skills">Skills</a></div>
-        <div class="link"><a href="#contact">Contact</a></div>
+        <div class="link"  data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100"><a href="#home">Home</a></div>
+        <div class="link"  data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200"><a href="#experience">experience</a></div>
+        <div class="link"  data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300"><a href="#education">education</a></div>
+        <div class="link"  data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400"><a href="#skills">Skills</a></div>
+        <div class="link"  data-aos="fade-up" data-aos-duration="1500" data-aos-delay="500"><a href="#contact">Contact</a></div>
       </div>
       <i class="fa-solid fa-bars hamburg" onclick="hamburg()"></i>
   </div>
@@ -35,29 +37,39 @@
       </div>
   </nav>
 
-    <section>
+    <section id="Home">
       <div class="main-container">
-        <div class="image">
+        <div class="image"  data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="1800">
           <img src="portme1.png" alt=""   >
       </div>
       <div class="content">
-        <h1>Hey I'm <span>Narges Naghavi</span></h1>
-        <div class="typewriter">I'm a <span class="typewriter-text">Developer</span><label for="">|</label></div>
-        <p>I’m a student interested in math-heavy computer science topics like quantum computing, AI, and cellular automata. I have experience in backend development and testing and am building an interactive Rule 110 simulator with Django and Nuxt.js. I’m also preparing for the IELTS to improve my technical English. Outside of academics, I train in boxing twice a week and plan to start my own company.
+        <h1  data-aos="fade-left" data-aos-duration="1500" data-aos-delay="700">Hey I'm <span>Narges Naghavi</span></h1>
+        <div class="typewriter"  data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1500">I'm a <span class="typewriter-text">Developer</span><label for="">|</label></div>
+        <p  data-aos="flip-down" data-aos-duration="1500" data-aos-delay="1100">I’m a student interested in math-heavy computer science topics like quantum computing, AI, and cellular automata. I have experience in backend development and testing and am building an interactive Rule 110 simulator with Django and Nuxt.js.  Outside of academics, I train in boxing twice a week and plan to start my own company.
 
         </p>
         <div class="social-links">
-          <a href="#"><i class="fa-brands fa-github"></i></a>
-          <a href="#"><i class="fa-brands fa-telegram"></i></a>
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="#"  data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1800"><i class="fa-brands fa-github"></i></a>
+          <a href="#"  data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1800"><i class="fa-brands fa-telegram"></i></a>
+          <a href="#"  data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1800"><i class="fa-brands fa-linkedin"></i></a>
         </div>
-        <div class="btn">
+        <div class="btn"  data-aos="zoom-out" data-aos-duration="1800" data-aos-delay="100">
           <button>
-            about me
+            download my CV
           </button>
         </div>
       </div>
-    </section>
+    </section >
+
+    <!-- <section id="experience">
+      <h2> here my experience</h2>
+    </section> -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({offset:200});
+    </script>
     <script src="js/script.js"></script>
+
+    </div>
   </body>
 </html>
