--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
 
       <section id="skills">
         <!-- html -->
+        <h1>skills</h1>
         <div class="skill-card">
           <div class="rating">
             <h2>
