--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
               I’m a student interested in math-heavy computer science topics
               like quantum computing, AI, and cellular automata. I have
               experience in backend development and testing and am building an
-              interactive Rule 110 simulator with Django and Nuxt.js. Outside of
-              academics, I train in boxing twice a week and plan to start my own
-              company.
+              interactive Rule 110 simulator with Django and JavaScript. Outside
+              of academics, I train in boxing twice a week and plan to start my
+              own company.
             </p>
 
             <div class="social-links">
@@ -149,7 +149,7 @@
               </a>
 
               <a
-                href="#"
+                href="www.linkedin.com/in/narges-naghavi-92a51834b"
                 data-aos="fade-up"
                 data-aos-duration="1500"
                 data-aos-delay="2000"
@@ -535,6 +535,12 @@
           <a href="https://t.me/sudoyoumayneed" target="_blank"
             ><i class="fa-brands fa-telegram"></i
           ></a>
+
+          <a
+            href="mailto:nargesnaghavi@gmail.com?subject=portfolio%20website&body=whats%20up%3F"
+            target="_blank"
+            ><i class="fa-solid fa-envelope"></i
+          ></a>
         </div>
       </div>
     </section>
@@ -548,7 +554,7 @@
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script>
       (function () {
-        emailjs.init("service_057wr5r"); // اینو از داشبورد EmailJS میگیری
+        emailjs.init("Xfhacsz0AbjrBLY_Q"); // اینو از داشبورد EmailJS میگیری
       })();
     </script>
     <script>
